objects/hed__Application__c.object
<CustomObject>
    <description>Stores information about a student&apos;s application to an educational institution or program.</description>
    <label>Application</label>
    <nameField>
        <displayFormat>APP-{0000}</displayFormat>
        <label>Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>prospecto que aplica</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prueba__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prueba</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The term when the applicant wants to enroll.</description>
        <inlineHelpText>The term when the applicant wants to enroll.</inlineHelpText>
        <label>Term</label>
        <referenceTo>hed__Term__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plazo_Formula__c</fullName>
        <formula>hed__Term__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plazo Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Due_Date__c</fullName>
        <description>The date by which applicants must submit an application.</description>
        <inlineHelpText>The date by which applicants must submit an application.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hed__Preparer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Contact preparing the application, often a guardian.</description>
        <inlineHelpText>The Contact preparing the application. For example, a guardian or a person assisting someone with special needs.</inlineHelpText>
        <label>Preparer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Applications (Preparer)</relationshipLabel>
        <relationshipName>Applications_Preparer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Contact applying to the institution or program.</description>
        <inlineHelpText>The Contact applying to the institution or program.</inlineHelpText>
        <label>Applicant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Applications (Applicant)</relationshipLabel>
        <relationshipName>Applications_Applicant</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Open_Date__c</fullName>
        <description>The date when applicants can submit an application.</description>
        <inlineHelpText>The date when applicants can submit an application.</inlineHelpText>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Error_duplicidad__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Error duplicidad</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Applying_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The academic program or major the applicant is applying to.</description>
        <inlineHelpText>The academic program or major the applicant is applying to.</inlineHelpText>
        <label>Applying To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nombre_Aplicacion__c</fullName>
        <formula>hed__Applying_To__r.Name + &quot; &quot; +  hed__Term__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre Aplicación</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Application_Date__c</fullName>
        <description>The date and time when the application was submitted.</description>
        <inlineHelpText>The date and time when the application was submitted.</inlineHelpText>
        <label>Application Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>hed__Application_JSON__c</fullName>
        <description>A system field that stores a large JSON structure used for integrations. Do not modify this field.</description>
        <label>Application JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>hed__Application_Type__c</fullName>
        <description>The type of program or track the applicant is applying to.</description>
        <inlineHelpText>The type of program or track the applicant is applying to.</inlineHelpText>
        <label>Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Graduate</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Undergraduate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Application_Status__c</fullName>
        <description>The status of the application process.</description>
        <inlineHelpText>The status of the application process.</inlineHelpText>
        <label>Application Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Interesado</fullName>
                </value>
                <value>
                    <fullName>Inscrito</fullName>
                </value>
                <value>
                    <fullName>Evaluado</fullName>
                </value>
                <value>
                    <fullName>Admitido</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Initial_Creation_Date__c</fullName>
        <description>The date the application was initially created by the applicant.</description>
        <inlineHelpText>The date the application was initially created by the applicant.</inlineHelpText>
        <label>Initial Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hed__Applicant_Decision_Date__c</fullName>
        <description>The date when the student decides whether to enroll.</description>
        <inlineHelpText>The date when the student decides whether to enroll.</inlineHelpText>
        <label>Applicant Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hed__Application_Decision_Date__c</fullName>
        <description>The date when the institution decides whether to accept the applicant.</description>
        <inlineHelpText>The date when the institution decides whether to accept the applicant.</inlineHelpText>
        <label>Application Decision Date</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>hed__All</fullName>
        <columns>NAME</columns>
        <columns>hed__Applicant__c</columns>
        <columns>Lead__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>hed__Applying_To__c</columns>
        <columns>hed__Term__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <validationRules>
        <fullName>Error_duplicidad</fullName>
        <active>true</active>
        <errorConditionFormula>Error_duplicidad__c = TRUE</errorConditionFormula>
        <errorMessage>Ya tiene una solicitud en el mismo Programa y en el mismo periodo</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_Admitido_cuando_es_candidato</fullName>
        <active>true</active>
        <description>Regla de validación cuando el usuario realice el cambio el estado admisión y dicho registro se encuentre siendo candidato muestre el error.</description>
        <errorConditionFormula>AND(ISPICKVAL(hed__Application_Status__c ,&apos;Admitido&apos;), ISBLANK( hed__Applicant__c))</errorConditionFormula>
        <errorMessage>No esta permitido el estado en Admisión si el registro es un candidato</errorMessage>
    </validationRules>
</CustomObject>